[metadata]
name = menagerie-docs
version = 0.0.1
description = A static site generator made for MarkDown, HTML, JsonSchema, XMLSchema, and more
license = GNU Lesser General Public License v2.1
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    jinja2
    json-schema-for-humans
    xmlschema
    htmlmin
    rjsmin
    rcssmin
    pillow
    jsonschema
    markdown2
    markdown
    ndicts
    json-minify
    beautifulsoup4

[options.package_data]
* = *.jinja2, *.md, *.html, *.json, project_template/**

[options.packages.find]
exclude =
    .m_cache/