[metadata]
name = menagerie-docs
author = bwc9876
author_email = bwc9876@gmail.com
version = 0.1.13
url = https://github.com/Bwc9876/menagerie
description = A static site generator made for MarkDown, HTML, JsonSchema, XMLSchema, and more
long_description = file: README.md
license_file = LICENSE
long_description_content_type = text/markdown
license = GNU Lesser General Public License v2.1
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Environment :: Console
    Programming Language :: Python :: 3.10
    Natural Language :: English

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    jinja2
    json-schema-for-humans
    xmlschema
    htmlmin
    rjsmin
    rcssmin
    pillow
    jsonschema
    markdown2
    markdown==3.3.4
    ndicts
    json-minify
    beautifulsoup4
    pyyaml
    libsass

[options.entry_points]
console_scripts =
    menagerie = menagerie:execute_from_commandline

[options.package_data]
* = *.jinja2, *.md, *.html, *.json, project_template/**, *.js, *.css

[options.packages.find]
exclude =
    .m_cache/
